--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/isax785/obsidian-sparkling-day/HEAD/theme.css
-BASE_THEME=light
+THEME=https://raw.githubusercontent.com/bhappen/obsidian-space/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
